completed both analysis and setup codes for the No_SQL.ipynb files

--- a/Setup&Analysis(ipynb)/NoSQL_setup.ipynb
+++ b/Setup&Analysis(ipynb)/NoSQL_setup.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'classDB', 'config', 'fruits_db', 'local', 'travel_db', 'uk_food']\n"
+      "['admin', 'autosaurus', 'classDB', 'config', 'fruits_db', 'local', 'travel_db', 'uk_food']\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7ff3e862ffc0>"
+       "<pymongo.results.InsertOneResult at 0x7f8a1eb5e500>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7ff3e86c9840>"
+       "<pymongo.results.UpdateResult at 0x7f8a1e56a900>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -374,16 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7ff3e7ce0ec0>"
+       "<pymongo.results.DeleteResult at 0x7f8a1eb5e5c0>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -488,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7ff3e7cb93c0>"
+       "<pymongo.results.UpdateResult at 0x7f8a1eb82580>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,16 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7ff3e73ce500>"
+       "<pymongo.results.UpdateResult at 0x7f8a1eb83100>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,16 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7ff3e86cbcc0>"
+       "<pymongo.results.UpdateResult at 0x7f8a1e2d6d80>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
