Deleted "vscode' folder and files

--- a/Setup&Analysis(ipynb)/NoSQL_analysis.ipynb
+++ b/Setup&Analysis(ipynb)/NoSQL_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -66,11 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# assign the collection to a variable\n",
+    "# ['establishments'] collection within the database is assigned to the variable [establishments]\n",
     "establishments = db['establishments']"
    ]
   },
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -144,19 +145,22 @@
    ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
+    "# [score_query] is set to find establishments with a hygiene score of 20\n",
     "score_query = {\"scores.Hygiene\": 20}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "# [.count_documents()] is used to find the number of documents matching the query\n",
     "result_count = establishments.count_documents(score_query)\n",
     "print(f\"Number of establishments with hygiene score 20: {result_count}\")\n",
     "\n",
     "# Display the first document in the results using pprint\n",
+    "# [pprint()] is used to display the details of the first document that matches the query\n",
     "pprint(establishments.find_one(score_query))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +596,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -672,12 +676,14 @@
    ],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
+    "# [rating_query] is set to find establishments in London with a RatingValue greater than or equal to 4.\n",
     "rating_query = {\n",
     "    \"LocalAuthorityName\": {\"$regex\": \"London\", \"$options\": \"i\"},\n",
     "    \"RatingValue\": {\"$gte\": 4}\n",
     "}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "# Similar steps are taken as in Question 1 to count, display, and convert the results to a Pandas DataFrame\n",
     "result_count = establishments.count_documents(rating_query)\n",
     "print(f\"Number of establishments in London with RatingValue >= 4: {result_count}\")\n",
     "\n",
@@ -687,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1141,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,48 +1166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Search within 0.01 degree on either side of the latitude and longitude.\n",
     "# Rating value must equal 5\n",
@@ -1229,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1233,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1312,6 +1279,10 @@
     "# 1. Matches establishments with a hygiene score of 0\n",
     "# 2. Groups the matches by Local Authority\n",
     "# 3. Sorts the matches from highest to lowest\n",
+    "# [pipeline] is created using the aggregation framework to:\n",
+    "### Match establishments with a hygiene score of 0.\n",
+    "### Group the matches by Local Authority\n",
+    "### Sort the matches in descending order based on count\n",
     "pipeline = [\n",
     "    {\"$match\": {\"scores.Hygiene\": 0}},\n",
     "    {\"$group\": {\"_id\": \"$LocalAuthorityName\", \"count\": {\"$sum\": 1}}},\n",
@@ -1324,6 +1295,7 @@
     "print(f\"Number of documents in the result: {result_count}\")\n",
     "\n",
     "# Print the first 10 results\n",
+    "# The number of documents in the result and the first 10 results are printed\n",
     "result_cursor = establishments.aggregate(pipeline)\n",
     "for i, doc in enumerate(result_cursor):\n",
     "    if i < 10:\n",
